# pozo-demo

./: .gitignore  .pre-commit-config.yaml  README.md  ROADMAP.md  demo.es.ipynb  demo.ipynb  main.py  pyproject.toml  requirements.txt
.github/workflows/: pre-commit.yaml  pytest.yml
notebooks/: __init__.py  demo.ipynb  demo.py
src/pozo_demo/: __init__.py
